# danmakufu-test

./: CMakeLists.txt  README.MD  README.txt  _libvorbis_mingw.patch
cmake/: FindBgfx.cmake  linux32.toolchain  make_shader.cmake  mingw.toolchain
newbase/: Developer conversion guide.MD  README.MD  User conversion guide.MD
scripts/: mks.bat  mks.sh
source/: CMakeLists.txt  Version.h.in
source/FileArchiver/: CMakeLists.txt  MainWindow.hpp
source/GcLib/: CMakeLists.txt
source/GcLib/directx/: CMakeLists.txt  Callback.hpp  DirectGraphics.cpp  DirectGraphics.hpp  DirectInput.cpp  DirectInput.hpp  DirectSound.cpp  DirectSound.hpp  DxConstant.hpp  DxPlane.cpp  DxPlane.hpp  DxScript.cpp  DxScript.hpp  DxText.cpp  DxText.hpp  DxUtility.cpp  DxUtility.hpp  DxWindow.cpp  DxWindow.hpp  ElfreinaMesh.cpp  ElfreinaMesh.hpp  EventScript.cpp  EventScript.hpp  HLSL.hpp  MetasequoiaMesh.cpp  MetasequoiaMesh.hpp  RenderObject.cpp  RenderObject.hpp  ScriptManager.cpp  ScriptManager.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TransitionEffect.cpp  TransitionEffect.hpp  VertexDecl.hpp
source/GcLib/gstd/: Application.cpp  Application.hpp  CMakeLists.txt  File.cpp  File.hpp  FpsController.cpp  FpsController.hpp  GstdConstant.hpp  GstdUtility.cpp  GstdUtility.hpp  Logger.cpp  Logger.hpp  MersenneTwister.cpp  MersenneTwister.hpp  Script.cpp  Script.hpp  ScriptClient.cpp  ScriptClient.hpp  SmartPointer.hpp  Task.cpp  Task.hpp  Thread.cpp  Thread.hpp  Window.cpp  Window.hpp
source/Shaders/: CMakeLists.txt
source/Shaders/internal/: view1.fs  view1.vs
source/Shaders/renderobject/: tlx.def  tlx.fs  tlx.vs
source/Shaders/testmode/: 06bump.fs
source/Testmode/: BgfxBump.cpp  BgfxBump.hpp  CMakeLists.txt  README.TXT  SpriteTest.cpp  SpriteTest.hpp  StdAfx.h  TestApp.cpp  TestApp.hpp  TestMode.cpp
source/TouhouDanmakufu/: CMakeLists.txt
source/TouhouDanmakufu/Common/: CMakeLists.txt  DnhCommon.cpp  DnhCommon.hpp  DnhConstant.hpp  DnhGcLibImpl.cpp  DnhGcLibImpl.hpp  DnhReplay.cpp  DnhReplay.hpp  StgCommon.cpp  StgCommon.hpp  StgControlScript.cpp  StgControlScript.hpp  StgEnemy.cpp  StgEnemy.hpp  StgIntersection.cpp  StgIntersection.hpp  StgItem.cpp  StgItem.hpp  StgPackageController.cpp  StgPackageController.hpp  StgPackageScript.cpp  StgPackageScript.hpp  StgPlayer.cpp  StgPlayer.hpp  StgShot.cpp  StgShot.hpp  StgStageController.cpp  StgStageController.hpp  StgStageScript.cpp  StgStageScript.hpp  StgSystem.cpp  StgSystem.hpp  StgUserExtendScene.cpp  StgUserExtendScene.hpp
source/TouhouDanmakufu/DnhConfig/: CMakeLists.txt  Constant.hpp  MainWindow.cpp
source/TouhouDanmakufu/DnhExecutor/: CMakeLists.txt  Common.cpp  Common.hpp  Constant.hpp  GcLibImpl.cpp  GcLibImpl.hpp  ScriptSelectScene.cpp  ScriptSelectScene.hpp  StgScene.cpp  System.cpp  System.hpp  TitleScene.cpp  TitleScene.hpp  WinMain.cpp
source/TouhouDanmakufu/DnhViewer/: CMakeLists.txt  Constant.hpp
