cmake_minimum_required(VERSION 3.16)
project(Danmakufu)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
include(FindDirectX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")

if ("${VCPKG_TARGET_TRIPLET}" MATCHES "-static")
	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT")
	set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MTd")
endif()

find_package(ZLIB REQUIRED)
find_package(Vorbis CONFIG REQUIRED)

add_subdirectory(source)
